kubernetes-gateway-api/canary-sample-application/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sample-approute
spec:
  parentRefs:
  - name: nginx-gateway
    namespace: nginx-gateway 
  hostnames:
  - test.example.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: sample-app-v1
      port: 80
      weight: 90
    - name: sample-app-v2
      port: 80
      weight: 10
